# resolve-robotics-uri-py

./: README.md  rru_spec.md
examples/example_hatchling_package/: README.md  pyproject.toml
examples/example_hatchling_package/example_hatchling_package/: __init__.py
examples/example_hatchling_package/share/example_hatchling_package/: cube.urdf
examples/example_python_package/: README.md  package.xml  pyproject.toml  setup.py
examples/example_setuptools_package/: README.md  package.xml  pyproject.toml  setup.py
examples/example_setuptools_package/example_setuptools_package/: __init__.py
examples/example_setuptools_package/share/example_setuptools_package/: cube.urdf
src/resolve_robotics_uri_py/: resolve_robotics_uri_py.py
test/: test_default_search_paths.py  test_resolve_robotics_uri_py.py
