[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "example_hatchling_package"
version = "0.0.0"
description = "Example pure Python package that installs a URDF into share/ using Hatchling"

[tool.hatch.build.targets.wheel]
packages = ["example_hatchling_package"]

[tool.hatch.build.targets.wheel.shared-data]
"share" = "share"

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "example_hatchling_package/**",
  "share/**",
]
