[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_setuptools_package"
version = "0.0.0"
description = "Example pure Python package that installs a URDF into share/"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]

include-package-data = true
